No bug - fix many sonar issues
Signed-off-by: Dawid Pakula <zulus@w3des.net>